# drug-discovery-workflows

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .kiroignore  .taskcat.yml  6yio.fa  CHANGELOG.md  Makefile  README.md  deploy.sh  output.fa  output.jsonl  results.jsonl  testrun.sh
alphafold-multimer/: README.md  main.nf  (+3 more)
assets/containers/alphabind/alphabind/: README.md  pyproject.toml
assets/containers/alphabind/alphabind/examples/: README.md  requirements.txt
assets/containers/alphabind/alphabind/examples/data/: README.md
assets/containers/alphabind/alphabind/examples/data/raw/: README.md
assets/containers/alphabind/alphabind/examples/finetuning_and_inference/: README.md  tutorial_1_finetuning_alphabind.ipynb
assets/containers/alphabind/alphabind/examples/finetuning_and_inference/conf/: embed.env  predict.env  train.env
assets/containers/alphabind/alphabind/examples/optimization/: README.md  tutorial_2_optimization_alphabind.ipynb
assets/containers/alphabind/alphabind/examples/optimization/conf/: merge.env  optimize.env
assets/containers/alphabind/alphabind/src/alphabind/: __init__.py
assets/containers/alphabind/alphabind/src/alphabind/features/: __init__.py  build_features.py  featurize_using_esm_2.py
assets/containers/alphabind/alphabind/src/alphabind/models/: __init__.py  dataset.py  ensemble.py  model.py  predict_model.py  train_model.py
assets/containers/alphabind/alphabind/src/alphabind/optimizers/: __init__.py  generator.py  merge_all_generations.py  optimize_seeds.py  optimizer.py  scoring_wrapper.py  selector.py
(+677 files in other folders)
