[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alphabind"
version = "1.0.0"
description = "Public code for the A-Alpha Bio AlphaBind antibody optimization paper."
authors = [
    { name = "Aditya Agarwal" },
    { name = "James Harrang" },
    { name = "Adrian Lange" },
]
maintainers = [
    { name = "A-Alpha Bio Inc.", email = "machinelearning@aalphabio.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "click",
    "awscli",
    "python-dotenv>=0.5.1",
    "lightning>=2.2.1",
    "pandas",
    "tqdm",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest", "coverage"]
